# pi-o-net

./: .gitignore  README.md  pyproject.toml
configs/: gcp_resnet_rff.toml  ldc_re3000_5000.toml  local_fast.toml  local_fast_re1000_dense_phys.toml  local_resnet_rff.toml  paper_aligned_constant.toml  paper_aligned_cosine.toml  paper_aligned_step.toml  pit_ldc.toml  pit_ldc_run3.toml  pit_ldc_run4_cosine.toml  transformer_re1000.toml
docs/: pit_architecture.html  template.html
docs/superpowers/plans/: 2026-03-19-resnet-branch-rff-trunk.md  2026-03-20-ldc-deeponet.md  2026-03-22-pit-ldc.md
docs/superpowers/specs/: 2026-03-19-resnet-branch-rff-trunk-design.md  2026-03-20-ldc-deeponet-design.md  2026-03-22-pit-ldc-design.md
scripts/: setup_3090.sh
src/pi_onet/: __init__.py  dataset.py  evaluate_checkpoint.py  ldc_dataset.py  ldc_train.py  pit_ldc.py  train.py
tests/: test_dataset.py  test_ldc.py  test_model.py  test_pit_ldc.py
