[project]
name = "pi-o-net"
version = "0.1.0"
description = "DeepXDE DeepONet scaffold for high-Reynolds-number Kolmogorov flow prediction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "deepxde>=1.14,<2.0",
  "numpy>=2.2",
  "torch>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
train-kolmogorov-deeponet = "pi_onet.train:main"
eval-kolmogorov-checkpoint = "pi_onet.evaluate_checkpoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_onet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
